--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twilio/video-processors": "^1.0.2",
     "compression": "^1.7.4",
     "express": "^4.18.1",
+    "express-pino-logger": "^7.0.0",
     "twilio": "^3.81.0",
     "twilio-video": "^2.24.0"
   },
@@ -29,6 +30,7 @@
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.7.0",
+    "pino-colada": "^2.2.2",
     "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
