--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": "18"
   },
   "dependencies": {
+    "@twilio/krisp-audio-plugin": "^1.0.0",
     "@twilio/rtc-diagnostics": "^1.0.0",
     "@twilio/video-processors": "^1.0.2",
     "compression": "^1.7.4",
@@ -30,8 +31,12 @@
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.7.0",
+    "parcel-resolver-ignore": "^2.1.3",
     "pino-colada": "^2.2.2",
     "process": "^0.11.10"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "parcelIgnore": [
+    "/video/twilio-video.min.js"
+  ]
 }
